--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google-Homepage-Replica</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
-
     <!--Navigation bar // Header-->
 
-    <ul class="nav">
+    <ul class="nav navbar">
         <a href="https://www.google.com.mx/imghp?hl=es"> Gmail </a>
         <a href="https://www.google.com.mx/imghp?hl=es"> Images</a>
-        <img src="./assets/icons/menu.svg" alt="apps menu">
-        <img src="./assets/icons/user.svg" alt="user icon">
+        <img src="./assets/icons/menu.svg" alt="apps menu" />
+        <img src="./assets/icons/user.svg" alt="user icon" />
     </ul>
 
     <!--Navigation bar // Header-->
@@ -24,12 +23,79 @@
     <!--Main section-->
 
     <section>
-        <img src="./assets/img/googlelogo_color_272x92dp.png" alt="">
-        <button></button>
+        <div class="google-img">
+            <img src="./assets/img/googlelogo_color_272x92dp.png" alt="google logo" />
+        </div>
+        <div class="search-button" action="action_page.php">
+            <input type="text" placeholder="Search.." name="search" />
+            <button type="submit">Google Search</button>
+            <button type="submit">I'm Feeling lucky</button>
+            <p>
+                Google offered in:
+                <a href="https://www.google.com/setprefs?sig=0_NbHu266YoPfbGnRcH4wwW2GUsVU%3D&amp;hl=es-419&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwjN6pvAltDqAhUKKawKHVbiCicQ2ZgBCA8">Español (Latinoamérica)</a
+          >
+        </p>
+      </div>
     </section>
+
     <!--Main section-->
 
+    <!-- Footer -->
 
+    <legend>México</legend>
+    <div class="footer">
+      <ul>
+        <a
+          href="https://ads.google.com/intl/es-419_mx/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
+          >Advertising</a
+        >
+        <a
+          href="https://smallbusiness.withgoogle.com/intl/es-419_mx/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ww-ww-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u&c=MX#!/"
+          >Advertising</a
+        >
+        <a
+          href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1"
+          >About</a
+        >
+        <a href="https://www.google.com/search/howsearchworks/?fg=1"
+          >How Search Works</a
+        >
+      </ul>
+      <ul>
+        <a href="https://policies.google.com/privacy?hl=en-MX&fg=1">Privacy</a>
+                <a href="https://policies.google.com/terms?hl=en-MX&fg=1">Terms</a>
+                <li>
+                    Settings
+                    <ul>
+                        <li>Search Settings</li>
+                        <li>
+                            <a href="https://www.google.com/advanced_search?hl=en-MX&fg=1">Search</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.google.com/history/privacyadvisor/search/unauth?utm_source=googlemenu&fg=1"
+                >Your data in Search</a
+              >
+            </li>
+            <li>
+              <a href="https://www.google.com/history/optout?hl=en-MX&fg=1"
+                >Search Activity</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://support.google.com/websearch/?visit_id=637304455488971143-276506580&hl=en-MX&rd=2#topic=3378866"
+                >Search help</a
+              >
+            </li>
+            <li><a href="#">Send feedback</a></li>
+                    </ul>
+                </li>
+                </ul>
+        </div>
+
+        <!-- Footer -->
 </body>
 
 </html>
