almost done with everything

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +13,7 @@
     <div class="navbar">
       <ul>
         <li>
-          <a class="nav-item" href="https://www.google.com.mx/imghp?hl=es">
+          <a class="nav-item" href="https://www.google.com/gmail/about/#">
             Gmail
           </a>
         </li>
@@ -73,40 +72,49 @@
         <p>
           Google offered in:
           <a href="https://www.google.com/">Español (Latinoamérica)</a>
-          </p>
-    </div>
+        </p>
+      </div>
     </div>
 
     <!--Main section-->
 
     <!-- Footer -->
-    <div>
-      <span>México</span>
-    </div>
+    <span>México</span>
 
     <div class="footer">
-
       <!--left section-->
 
       <div class="adver-section">
         <ul>
           <li>
-            <a href="https://ads.google.com/intl/es-419_mx/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">
+            <a
+              class="nav-item"
+              href="https://ads.google.com/intl/es-419_mx/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
+            >
               Advertising
             </a>
           </li>
           <li>
-            <a href="https://smallbusiness.withgoogle.com/intl/es-419_mx/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ww-ww-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u&c=MX#!/">
+            <a
+              class="nav-item"
+              href="https://smallbusiness.withgoogle.com/intl/es-419_mx/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ww-ww-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u&c=MX#!/"
+            >
               Business
             </a>
           </li>
           <li>
-            <a href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1">
+            <a
+              class="nav-item"
+              href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1"
+            >
               About
             </a>
           </li>
           <li>
-            <a href="https://www.google.com/search/howsearchworks/?fg=1">
+            <a
+              class="nav-item"
+              href="https://www.google.com/search/howsearchworks/?fg=1"
+            >
               How Search Works
             </a>
           </li>
@@ -120,40 +128,56 @@
       <div class="privacy-section">
         <ul>
           <li>
-            <a href="https://policies.google.com/privacy?hl=en-MX&fg=1">
+            <a
+              class="nav-item"
+              href="https://policies.google.com/privacy?hl=en-MX&fg=1"
+            >
               Privacy
             </a>
           </li>
           <li>
-            <a href="https://policies.google.com/terms?hl=en-MX&fg=1">Terms</a>
+            <a
+              class="nav-item"
+              href="https://policies.google.com/terms?hl=en-MX&fg=1"
+              >Terms</a
+            >
           </li>
           <li class="dropup">
             Settings
             <ul class="dropup-content">
               <li>Search Settings</li>
               <li>
-                <a href="https://www.google.com/advanced_search?hl=en-MX&fg=1">Search</a
+                <a
+                  class="nav-item"
+                  href="https://www.google.com/advanced_search?hl=en-MX&fg=1"
                 >
+                  Search
+                </a>
               </li>
               <li>
                 <a
+                  class="nav-item"
                   href="https://www.google.com/history/privacyadvisor/search/unauth?utm_source=googlemenu&fg=1"
-                  >Your data in Search</a
                 >
+                  Your data in Search
+                </a>
               </li>
               <li>
-                <a href="https://www.google.com/history/optout?hl=en-MX&fg=1"
+                <a
+                  class="nav-item"
+                  href="https://www.google.com/history/optout?hl=en-MX&fg=1"
                   >Search Activity</a
                 >
               </li>
               <li>
                 <a
+                  class="nav-item"
                   href="https://support.google.com/websearch/?visit_id=637304455488971143-276506580&hl=en-MX&rd=2#topic=3378866"
                   >Search help</a
                 >
               </li>
               <li>
-                <a href="#">
+                <a class="nav-item" href="#">
                   Send feedback
                 </a>
               </li>
@@ -161,11 +185,9 @@
           </li>
         </ul>
       </div>
-
       <!-- right section -->
     </div>
 
     <!-- Footer -->
   </body>
-
 </html>
